[gd_scene load_steps=8 format=3 uid="uid://hhhsyqdb8lhq"]

[ext_resource type="Script" path="res://scenes/antiloot/antiloot_screen.gd" id="1_oo6ws"]
[ext_resource type="PackedScene" uid="uid://bkuwimgtyjjy2" path="res://scenes/elements/slot.tscn" id="2_gd7c1"]
[ext_resource type="Script" path="res://scenes/antiloot/drop_zone.gd" id="3_k0ocp"]
[ext_resource type="AudioStream" uid="uid://cwclvhohslx1k" path="res://sounds/sfx/Select in.mp3" id="4_8cuee"]
[ext_resource type="Texture2D" uid="uid://cfqxsojystkwo" path="res://assets/pit/pit0001.png" id="6_lxi31"]
[ext_resource type="Theme" uid="uid://brwb6odwkwryg" path="res://assets/themes/menu_theme.tres" id="6_te1uf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8twhm"]
radius = 57.0
height = 246.0

[node name="AntilootScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_oo6ws")
should_reset = true

[node name="Slot1" parent="." instance=ExtResource("2_gd7c1")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 128.0
offset_top = -107.5
offset_right = 350.0
offset_bottom = 91.0
grow_horizontal = 1

[node name="Slot2" parent="." instance=ExtResource("2_gd7c1")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -237.0
offset_bottom = -105.0
grow_vertical = 0

[node name="Slot3" parent="." instance=ExtResource("2_gd7c1")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = -107.5
offset_right = -128.0
offset_bottom = 91.0
grow_horizontal = 0

[node name="DropZone" type="Control" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 64.0
offset_right = 142.0
offset_bottom = 218.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("3_k0ocp")

[node name="SelectionSFX" type="AudioStreamPlayer2D" parent="DropZone"]
stream = ExtResource("4_8cuee")
volume_db = -5.0

[node name="PitArt" type="TextureRect" parent="DropZone"]
layout_mode = 0
offset_left = -105.0
offset_top = -198.0
offset_right = 407.0
offset_bottom = 314.0
mouse_filter = 2
texture = ExtResource("6_lxi31")

[node name="HoverDetector" type="Area2D" parent="DropZone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropZone/HoverDetector"]
position = Vector2(136, 79)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8twhm")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.85
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = 0.447937
offset_top = -0.256012
offset_bottom = 0.207947
theme = ExtResource("6_te1uf")
text = "Drop Nothing"

[connection signal="part_chosen" from="DropZone" to="." method="_on_drop_zone_part_chosen"]
